# ant-sim

./: CMakeLists.txt  README.md  main.cpp
include/: Ant.h  Food.h  Home.h  IMovementBehavior.h  Pheromone.h  SeekBehavior.h  UI.h  Vector2Utils.h  WanderBehavior.h  World.h
src/: Ant.cpp  Food.cpp  Home.cpp  UI.cpp  WanderBehavior.cpp  World.cpp
